test/errhandling/ferguson/throw-new-borrowed2.chpl
proc main() throws {
  var x = new Error(); // aka new borrowed Error
  throw x;
}
